# finance-project

./: pyproject.toml
finance_project/: main.py
finance_project/database/: database.py
finance_project/models/: stocks.py
finance_project/schemas/: stock_schemas.py
tests/: conftest.py  test_main.py
