[tool.poetry]
name = "finance-project"
version = "0.1.0"
description = ""
authors = ["jorgeholberton <ingesoft99@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.2"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
